[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml4h-latentverse"
version = "0.3.0"
description = "Latentverse evaluation suite + MultiLoReFT multimodal decoupling. Five core tests (clusterability, disentanglement, expressiveness, robustness, probing) over latent representations, plus a multimodal embedding decoupler."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Yoanna Turura", email = "yturura@broadinstitute.org" },
    { name = "Majd Alafrange", email = "majd@mit.edu" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "torch>=2",
    "joblib>=1.3",
    "numba>=0.57",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/broadinstitute/ml4h-latentverse"

[tool.setuptools.packages.find]
where = ["."]
include = ["ml4h_latentverse*"]

# CI lint is intentionally minimal: catch real bugs (syntax errors, undefined
# names, broken f-strings) but not stylistic warnings, so CI stays green while
# the library evolves quickly. Run `ruff check ml4h_latentverse --select=ALL`
# locally for a deeper review.
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E9",  # syntax errors
    "F63", # invalid identifiers, type comparisons
    "F7",  # syntax errors in stmts
    "F82", # undefined names
]

[tool.ruff.lint.per-file-ignores]
# multimodal_projector.py contains a Flickr-style text-tokenization branch
# (self.encoders is not None) that references `en_tokenizer` / `fr_tokenizer`
# as module-level externals supplied by the calling context. Mainline usage
# always passes pre-computed numeric embeddings, so self.encoders stays None
# and those names are unreachable. Skip F821 to keep CI green without
# deleting the upstream code path.
"ml4h_latentverse/multiloreft/multimodal_projector.py" = ["F821"]
